# otus-helloworld

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: CMakeLists.txt  version.h
lib/: CMakeLists.txt  lib.cpp  lib.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
